hphp/hack/test/typecheck/construct/missing_init_static.php.exp
File "missing_init_static.php", line 20, characters 22-24:
Please assign a value (Typing[4055])
